objects/Trigger_Setting__c/Trigger_Setting__c.object-meta.xml
<CustomObject>
    <description>Object is used to store the Disable various Triggers/Features for a user. Note that Disabling Flows/Validation rules is done based User fields.</description>
    <label>Trigger Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>