objects/Trigger_Setting__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If is not active, then it behaves as if this record doesn&apos;t exists and none of the features/triggers would be skipped.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>