objects/Trigger_Setting__c/fields/Disable_Features__c.field-meta.xml
<CustomField>
    <fullName>Disable_Features__c</fullName>
    <inlineHelpText>Enter comma separated list of features to disable. Feature names are are case insensitive.</inlineHelpText>
    <label>Disable Features</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>