objects/Trigger_Setting__c/fields/Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Triggers__c</fullName>
    <inlineHelpText>Enter comma separated list of triggers to disable. Enter sobject api name to disable its triggers.</inlineHelpText>
    <label>Disable Triggers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>