objects/Trigger_Setting__c/fields/Upsert_Id__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Id__c</fullName>
    <externalId>true</externalId>
    <label>Upsert Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>