objects/Trigger_Setting__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User to which this record belongs to</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Skip_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>